<resources>
    <string name="mine_name">module-mine</string>
    <string name="me_user_name_hint">恒行体育，您身边的滚球顾问~</string>
    <string name="me_user_nickname">用户昵称</string>
    <string name="me_login_hint">登录</string>
    <string name="me_register_hint">注册</string>
    <string name="me_visit_hint">您好游客，请点击登录按钮</string>
    <string name="me_money_total">总资产(元)</string>
    <string name="me_get_all_money">一键汇总</string>
    <string name="me_level_hint">亲！您还差6000点就可以升级为VIP1，更多福利等着您！</string>
    <string name="txt_level_hint_00">亲！您还差%1$d点就可以升级为VIP%2$d，更多福利等着您！</string>
    <string name="txt_level_hint_10">恭喜您达到尊贵的VIP%1$d，请尽享本平台游戏及福利!</string>
    <string name="me_my_pocket">我的钱包</string>
    <string name="me_transfer">转账</string>
    <string name="me_betting_record">投注记录</string>
    <string name="me_account_record">账变记录</string>
    <string name="me_account_safety">账户安全</string>
    <string name="me_more_service">更多服务</string>
    <string name="me_invite_friend">好友邀请</string>
    <string name="me_logout_login">退出登录</string>
    <string name="me_login">登录</string>
    <string name="me_account_hint">请输入账号</string>
    <string name="me_pwd_hint">请输入密码</string>
    <string name="me_pwd_rember">记住密码</string>
    <string name="me_pwd_forget_title">忘记密码</string>
    <string name="me_pwd_forget">忘记密码？</string>
    <string name="me_agreement_hint">我已阅读并同意</string>
    <string name="me_agreement_content">《游戏网站使用者条款》</string>
    <string name="me_agreement">游戏网站使用者条款</string>
    <string name="me_agreement_text">请贵使用者确认以下事项：\n\n 1. 贵使用者用以本网站注册之个人基本资料均与实际情况相符，且无冒用他人资料或伪造变造之情事。\n\n 2. 贵使用者于使用本网站提供之服务时，目前所在国家/地区并非香港、澳门、或台湾。 贵使用者兹确认登录本网站及使用本网站提供服务，并不违反目前所在之国家/地区之法令。\n\n 3. 贵使用者并未使用虚拟私人网路（VPN）或者其他任何不当手法连结至本网站，以致本网站无法确认使用者之真实目前所在国家/地区。\n\n 4. 贵使用者亦已知悉，如目前所在国家/地区禁止类似于本网站所提供服务时，本网站将拒绝提供服务；贵使用者并明确知悉使用违反前项规定所可能导致之法律制裁或其他风险。\n\n 5. 贵使用者兹确认不会藉本网站所提供服务用以从事任何违法活动\n\n 6.一个会员只能拥有一个账号，若平台发现有重复申请账号及违规套利行为，将永久冻结所有相关账号，且扣除账号余额。\n\n 7. 贵使用者了解及同意如本网站发现或知悉 贵使用者于本网站有任何违法或违反使用者条款之行为，本网站将立即停止一切服务，视情节将账号停权。必要时将通报相关司法或警察机关。</string>
    <string name="me_go_round">先去逛逛</string>
    <string name="me_online_service">在线客服</string>
    <string name="me_agree_hint">请授权同意</string>
    <string name="me_register">注册</string>
    <string name="me_register_reinput">请再次输入密码</string>
    <string name="me_choose_acount">请选择账号类型</string>
    <string name="me_my_wallet">我的钱包</string>
    <string name="me_wallet_title">平台中心余额 (元)</string>
    <string name="me_wallet_amount">0.0000</string>
    <string name="me_wallet_save">存款</string>
    <string name="me_wallet_transfer">转账</string>
    <string name="me_wallet_withdraw">取款</string>
    <string name="me_wallet_account">账户管理</string>
    <string name="me_wallet_record">充提记录</string>
    <string name="me_wallet_details">钱包明细</string>
    <string name="me_wallet_ptgame">PT娱乐</string>
    <string name="me_wallet_bbingame">BBIN娱乐</string>
    <string name="me_wallet_aggame">AG街机捕鱼</string>
    <string name="me_wallet_pmgame">DB电竞</string>
    <string name="me_wallet_yunyouqipai">云游棋牌</string>
    <string name="me_wallet_dbgame">DB电竞</string>
    <string name="me_wallet_dbqp">DB棋牌</string>
    <string name="txt_user_name">用户名</string>
    <string name="txt_user_name_input">请输入用户名</string>
    <string name="txt_transfer">转账</string>
    <string name="txt_1k_recycle">一键回收</string>
    <string name="txt_auto_transfer">自动免转</string>
    <string name="txt_lock_wallet">锁定钱包</string>
    <string name="txt_hide_no_blc_game">隐蔽无余额场馆</string>
    <string name="txt_choose_trans_out">选择转出场馆</string>
    <string name="txt_choose_trans_in">选择转入场馆</string>
    <string name="txt_trans_out">转出</string>
    <string name="txt_trans_in">转入</string>
    <string name="txt_pls_enter_transfer_amount">请输入转账金额</string>
    <string name="txt_in_out_cannot_be_same">转入场馆和转出场馆不能相同</string>
    <string name="txt_amount_cannot_empty">金额不能为空</string>
    <string name="txt_insufficient_balance">" 余额不足"</string>
    <string name="txt_is_1k_recycle_all_title">一键转回</string>
    <string name="txt_is_1k_recycle_all">一键转回所有平台余额到中心钱包？</string>
    <string name="txt_check_transfer">确认要为下级转账？ \n转账金额 : %1$s</string>
    <string name="text_confirm">确认</string>
    <string name="text_cancel">取消</string>
    <string name="txt_open_auto_slow">开户免转，进入游戏场馆速度相较于关闭时会有一定降低，如发现第三方场馆进入过慢等问题，请关闭免转后重试</string>
    <string name="txt_confirm_open">确认开启</string>
    <string name="txt_central_wallet">中心钱包</string>
    <string name="txt_transfer_success">转账成功</string>
    <string name="txt_transfer_fail">转账失败</string>
    <string name="txt_set_succ">设置成功</string>
    <string name="txt_set_fail">设置失败</string>
    <string name="txt_recycle_succ">回收成功</string>
    <string name="txt_recycle_fail">回收失败</string>
    <string name="txt_security_center">安全中心</string>
    <string name="txt_pwd_edit_hint">安全守护 无忧投注</string>
    <string name="txt_login_pwd">登录密码</string>
    <string name="txt_login_pwd_update">修改登录密码</string>
    <string name="txt_funds_pwd">资金密码</string>
    <string name="txt_funds_pwd_set">设置资金密码</string>
    <string name="txt_funds_pwd_update">修改资金密码</string>
    <string name="txt_pwd_safe">密保设定</string>
    <string name="txt_google_code">Google动态口令</string>
    <string name="txt_google_prompt1">1.在手机应用商店搜索"Google身份验证器"或者"Google Authenticator"，下载安装即可，也可以扫码下方二维码直接安装</string>
    <string name="txt_google_prompt2">2.安装完成后打开"Google Authenticator"，扫描下方二维码或手动输入密钥，得到6位数验证码</string>
    <string name="txt_google_prompt3">3.请将您获得的验证码输入到下方输入框中，并完成验证</string>
    <string name="txt_key">密钥: </string>
    <string name="txt_google_hit_prompt">(请在动态口令中查看当前口令，并填入上方输入框)</string>
    <string name="edit_google_hit">请输入谷歌验证码</string>
    <string name="btn_bind_text">绑 定</string>
    <string name="txt_bind_phone">绑定手机号码</string>
    <string name="txt_bind_phone_title">绑定手机号</string>
    <string name="txt_bind_email">绑定邮箱地址</string>
    <string name="txt_security_verify">安全验证</string>
    <string name="txt_verify">验证</string>
    <string name="txt_choose_verify">请输入选择验证方式</string>
    <string name="txt_phone_verify">手机号验证</string>
    <string name="txt_email_verify">邮箱验证</string>
    <string name="txt_phone_num">手机号码</string>
    <string name="txt_email_addr">邮箱地址</string>
    <string name="txt_email">邮箱</string>
    <string name="txt_change_phone_num">"已绑定 "</string>
    <string name="txt_change_email">"更新邮箱地址 "</string>
    <string name="txt_pwd_cannot_empty">新密码不能为空</string>
    <string name="txt_pwd_not_same">两次密码不一致</string>
    <string name="txt_pwd_error_tip">密码长度为6-16字符，包含数字和字母</string>
    <string name="txt_change_succ">修改成功</string>
    <string name="txt_set_funds_pwd_succ">设置资金密码成功</string>
    <string name="txt_get_code">获取验证码</string>
    <string name="txt_already_send_code">已发送验证码</string>
    <string name="txt_bind_succ">绑定成功</string>
    <string name="txt_verify_succ">验证成功</string>
    <string name="txt_enter_new_phone">请输入新手机</string>
    <string name="txt_enter_new_email">请输入新邮箱</string>
    <string name="txt_enter_phone_num">请输入11位的手机号码</string>
    <string name="txt_enter_email_pls">请输入邮箱地址</string>
    <string name="txt_enter_code_pls">请输入验证码</string>
    <string name="txt_verify_code">验证码</string>
    <string name="txt_email_will_help_u">邮箱将有助于您找回账号，同时也是客服人员确认您身份的重要依据</string>
    <string name="txt_phone_will_help_u">手机号码将有助于您找回账号，同时也是客服人员确认您身份的重要依据</string>
    <string name="txt_tip_cs_01">遇到问题 ？联系</string>
    <string name="txt_tip_cs_02">人工客服</string>
    <string name="txt_tip_cs_03">解决</string>
    <string name="txt_change_pwd">修改密码</string>
    <string name="txt_enter_pwd">请输入登录密码</string>
    <string name="txt_enter_new_pwd">请输入新的登录密码</string>
    <string name="txt_user_name_should_6_12">用户名为6到12位</string>
    <string name="txt_pwd_should_6_12">密码为6到12位</string>
    <string name="txt_pwd_should_6_16">登录密码是由字母和数字组成的6–16位字符</string>
    <string name="txt_enter_pwd_again">请再次输入密码</string>
    <string name="txt_pwd_should_same">两次输入密码不一致</string>
    <string name="txt_enter_bank_num">请输入银行卡号</string>
    <string name="txt_enter_account_name">请输入开户人姓名</string>
    <string name="txt_choose_bank">请选择银行</string>
    <string name="txt_choose_province">请选择省</string>
    <string name="txt_choose_city">请选择市</string>
    <string name="txt_enter_branch">请输入支行名称</string>
    <string name="txt_s_bank_num">*银行卡号</string>
    <string name="txt_s_acc_real_name">*开户人姓名</string>
    <string name="txt_s_enter_real_name_pls">*为了您的资金能够迅速到账，请确保填写你的姓名与银行卡的开户姓名一致</string>
    <string name="txt_s_bank_name">*开户银行</string>
    <string name="txt_s_branch_name">*支行名称</string>
    <string name="txt_choose_pls">请选择</string>
    <string name="txt_choose_type_pls">请选择类型</string>
    <string name="txt_s_usdt_type">*货币类型</string>
    <string name="txt_s_usdt_addr">*提现钱包地址</string>
    <string name="txt_s_usdt_addr2">*确认钱包地址</string>
    <string name="txt_enter_wallet_addr">请输入钱包地址</string>
    <string name="txt_enter_wallet_addr2">确认钱包地址</string>
    <string name="txt_enter_wallet_old_addr">请输入旧的钱包地址</string>
    <string name="txt_verify_name">*上次绑定银行卡开户名</string>
    <string name="txt_verify_acc">*上次绑定银行卡号</string>
    <string name="txt_verify_addr">*上次绑定钱包地址</string>
    <string name="txt_verify_addr_warning">请输入最新绑定钱包地址</string>
    <string name="txt_enter_verify_wallet_addr">请输入上次绑定的钱包地址</string>
    <string name="txt_lock_card">锁定银行卡</string>
    <string name="txt_add_bind">增加绑定</string>
    <string name="txt_card_locked">卡已锁定</string>
    <string name="txt_bind_most_cards">一个账户最多只能绑定%1$s张银行卡</string>
    <string name="txt_lock_cards">银行卡锁定可以增强账户安全,推荐锁定(如：账户被他人盗用后，由于锁定的限制，您账户的资金不会被他人提款 )</string>
    <string name="txt_u_cannot_unlock_cards">银行卡锁定后，不能增加新银行卡绑定，自身不能解绑和解锁银行卡，联系您的上级申请解锁</string>
    <string name="txt_bind_most_usdt">一个账户最多只能绑定%1$s个%2$s地址</string>
    <string name="txt_bind_most_aw">每个账户最多可以绑定%1$s个%2$s收款码</string>
    <string name="txt_rebind">重新绑定</string>
    <string name="txt_open_acc_bank">开户行：</string>
    <string name="txt_card_num">卡号：</string>
    <string name="txt_open_area">*开户地区</string>
    <string name="txt_info_review">信息核对</string>
    <string name="txt_nickname_c">昵称：</string>
    <string name="txt_bind_bank_c">绑定银行：</string>
    <string name="txt_bank_province_c">开户银行省份：</string>
    <string name="txt_bank_city_c">开户银行城市：</string>
    <string name="txt_branch_name_c">支行名称：</string>
    <string name="txt_acc_name_c">开户人姓名：</string>
    <string name="txt_bank_acc_c">银行账号：</string>
    <string name="txt_enter_the_last_acc_name">请输入最新绑定银行卡开户人姓名</string>
    <string name="txt_enter_last_bank_card_num">请输入最新绑定银行卡卡号</string>
    <string name="txt_note_cs_cannot_unlock_bank_card">注意：在线客服不提供账户银行卡解锁业务，若要解锁请向上级代理申请。</string>
    <string name="txt_type_c">类型：</string>
    <string name="txt_address_c">地址：</string>
    <string name="txt_wallet_address_c">钱包地址：</string>
    <string name="txt_address_should_same">两次输入的地址不一致</string>
    <string name="txt_bind_time_c">绑定时间：</string>
    <string name="txt_acc_change_type">账变类型</string>
    <string name="txt_status_s">状态：</string>
    <string name="txt_order_expired">订单超时</string>
    <string name="txt_view">查看</string>
    <string name="txt_3rd_order_s">第三方单号：</string>
    <string name="txt_deposit_amount_s">存款金额：</string>
    <string name="txt_deposit_time_s">存款时间：</string>
    <string name="txt_submit_time_s">提交时间：</string>
    <string name="txt_bt_amount2">投注金额</string>
    <string name="txt_sprize_amount">中奖金额</string>
    <string name="txt_efficient_bt">有效投注</string>
    <string name="txt_member_win_fail">会员输赢</string>
    <string name="txt_rebate_amount">返水金额</string>
    <string name="txt_discount_amount">优惠金额</string>
    <string name="txt_sprize_amount2">奖金</string>
    <string name="txt_profit_loss">盈亏</string>
    <string name="txt_game_plat_s">游戏平台：</string>
    <string name="txt_game_name_s">游戏名：</string>
    <string name="txt_game_code_s">注单号：</string>
    <string name="txt_bt_date_s">投注日期：</string>
    <string name="txt_detail">详情</string>
</resources>