<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.xtree.mine.ui.viewmodel.VerifyViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.BindPhoneFragment">

        <View
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/tvw_title"
            style="@style/style_security_title"
            android:text="@string/txt_email" />

        <EditText
            android:id="@+id/edt_num"
            style="@style/style_cm_edit"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/layout_margin"
            android:background="@null"
            android:hint="@string/txt_enter_email_pls"
            android:inputType="textEmailAddress"
            android:maxLength="60" />

        <View style="@style/style_dividing_line" />

        <TextView
            style="@style/style_security_title"
            android:text="验证码" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/layout_margin">

            <EditText
                android:id="@+id/edt_code"
                style="@style/style_cm_edit"
                android:background="@null"
                android:hint="@string/txt_enter_code_pls"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvw_code"
                style="@style/style_get_code"
                android:text="@string/txt_get_code"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View style="@style/style_dividing_line" />

        <TextView
            style="@style/style_info_grey_50"
            android:text="@string/txt_email_will_help_u" />

        <ImageView
            android:id="@+id/ivw_ok"
            style="@style/style_ok" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                style="@style/style_info2_grey_50"
                android:text="@string/txt_tip_cs_01" />

            <TextView
                android:id="@+id/tvw_cs"
                style="@style/style_info2_grey_50"
                android:text="@string/txt_tip_cs_02"
                android:textColor="@color/clr_txt_link" />

            <TextView
                style="@style/style_info2_grey_50"
                android:text="@string/txt_tip_cs_03" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>